--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "work_flow",
+	"name": "work-flow-visualizer",
 	"version": "0.1.0",
 	"homepage": "./",
 	"private": true,
@@ -17,11 +17,11 @@
 		"react-pro-sidebar": "^0.4.4",
 		"react-rnd": "^10.2.4",
 		"react-router-dom": "^5.2.0",
-		"react-scripts": "5.0.0",
+		"react-scripts": "^2.1.3",
 		"react-syntax-highlighter": "^15.4.3",
 		"react-toastify": "^8.1.0",
 		"reactjs-popup": "^2.0.4",
-		"node-sass": "^6.0"
+		"sass": "^1.57.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
