--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "firebase": "^9.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-flow-renderer": "^10.3.17",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^9.1.1",
+    "reactflow": "^11.4.2",
     "reactjs-popup": "^2.0.5",
     "sass": "^1.57.1",
     "web-vitals": "^2.1.4"
